# machine-learning-cali-housing

./: .gitignore  README.md  pyproject.toml
notebooks/: 02_end_to_end_machine_learning_project.ipynb
