[tool.poetry]
name = "machine-learning-cali-housing"
version = "0.1.0"
description = ""
authors = ["Mavrick Laakso <laakso.mavrick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
